--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
           <form class="" action="https://echo.htmlacademy.ru" method="get">
             <label for="search" class="visually-hidden">Поиск:</label>
             <input id="search" type="search" name="search" value="" placeholder="Поиск:">
+            <span class="icon-search icons-header icon-cursor-search"></span>
           </form>
             </li>
             <li>
+              <span class="favorites-icon icons-header icon-cursor-pointer"></span>
               <a href="#" class="favorites">Закладки: 0</a>
             </li>
             <li>
+              <span class="basket-icon icons-header icon-cursor-pointer"></span>
               <a href="#" class="basket">Корзина: 0</a>
             </li>
-            <li >
+            <li>
               <a href="#" class="checkout">Оформить заказ</a>
             </li>
           </ul>
@@ -37,64 +40,86 @@
       </div>
       <div class="lightblue-background">
         <div class="container header-panel">
-          <p class="title"> Интернет-магазин <br>
-            строительных материалов <br>
-            и инструментов для ремонта
-          </p>
-          <section class="contact-info-header">
-            <h2 class="visually-hidden">Контактный телефон:</h2>
-            <span>+7 (812) 555-05-55</span>
-            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          </section>
+            <p class="title"> Интернет-магазин <br>
+              строительных материалов <br>
+              и инструментов для ремонта
+            </p>
+            <section class="contact-info-header">
+              <h2 class="visually-hidden">Контактный телефон:</h2>
+              <svg class="icon-phone" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 width="19px" height="19px" viewBox="0 0 19 19" enable-background="new 0 0 19 19" xml:space="preserve">
+                <g id="UrwUhy_1_">
+                <g>
+                <path fill="#B7BFC8" d="M15.572,18.985c-0.312,0-0.629,0-0.941,0c-4.129-0.488-7.157-2.408-9.359-4.864
+                  c-2.21-2.461-3.954-5.629-4.294-9.893c0-0.382,0-0.762,0-1.144C1.056,2.31,1.437,1.78,1.876,1.327
+                  C2.425,0.766,3.25,0.044,4.002,0.019c0.554-0.018,1.5,0.38,1.879,0.899C6.21,1.364,6.385,2.257,6.537,2.921
+                  c0.154,0.671,0.505,1.643,0.408,2.289C6.797,6.217,5.458,6.644,5.066,7.376c1.307,3.135,3.443,5.439,6.293,7.031
+                  c0.715-0.392,1.346-1.572,2.332-1.595c0.359-0.009,0.818,0.178,1.184,0.286c0.402,0.121,0.75,0.275,1.104,0.408
+                  c0.596,0.224,1.648,0.521,2.004,1.021c0.365,0.513,0.57,1.356,0.49,1.879C18.309,17.447,16.594,18.603,15.572,18.985z"/></g></g></svg>
+                <span>+7 (812) 555-05-55</span>
+              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            </section>
           <ul class="user-panel">
-            <li class="sign-in"><button type="button" name="sign-in">Войти</button></li>
+            <li class="sign-in"><button type="button" name="sign-in">Войти</button><span class="icon-login icon-cursor-pointer"></span></li>
             <li><button type="button" name="sign-up">Регистрация</button></li>
           </ul>
-          <nav class="header-navigation container">
-            <ul>
-              <li><a href="index.html">Главная</a></li>
-              <li><a href="#">Компания</a></li>
-              <li><a href="catalog.html">Каталог</a></li>
-              <li><a href="#">Новости</a></li>
-              <li><a href="#">Спецпредложения</a></li>
-              <li><a href="#">Доставка</a></li>
-              <li><a href="#">Контакты</a></li>
-            </ul>
-          </nav>
-        </div>
+          </div>
+          <div class="header-nav-div">
+            <nav class="header-navigation container m-top-34">
+              <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="#">Компания</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Спецпредложения</a></li>
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Контакты</a></li>
+              </ul>
+            </nav>
+          </div>
       </div>
     </header>
     <main class="cuprum-family">
-    <div class="container m-top-60 m-bottom-60">
+    <div class="container m-top-59 m-bottom-53">
       <div class="container-elements-first-line">
         <section class="elements-catalog-list element-1">
+          <span class="new-catalog-item-materials"></span>
           <h2>Материалы</h2>
           <a href="#">На любой вкус</a>
+          <img class="icon-catalog-element-1 catalog-element-icons" src="img/materials.svg" alt="">
           <!-- <img src="img/materials.svg" alt="Иконка материалов">
           <img src="img/icon-new.png" alt=""> -->
         </section>
         <section class="elements-catalog-list element-2">
           <h2>Инструмент</h2>
           <a href="#">На все случаи</a>
+          <img class="icon-catalog-element-2 catalog-element-icons" src="img/instruments.svg" alt="">
         </section>
         <section class="elements-catalog-list element-3">
           <h2>Техника</h2>
           <a href="#">Для стройки</a>
+          <img class="icon-catalog-element-3 catalog-element-icons" src="img/tech.svg" alt="">
         </section>
       </div>
       <div class="container-elements-second-line">
+        <input class="visually-hidden" type="radio" id="first-slider" name="toggle">
+        <input class="visually-hidden" type="radio" id="second-slider" name="toggle" checked>
         <div class="big-element">
           <section class="element-4">
-            <!-- <div class="first-slider">
+            <div class="slider-controls">
+              <label class="slider-controls-item-1" for="first-slider"></label>
+              <label class="slider-controls-item-2" for="second-slider"></label>
+            </div>
+            <a href="#" class="left-btn-slider"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
+            <a href="#" class="right-btn-slider"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
+            <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
+            <div class="first-slider">
               <h2 class="mp-null">Перфораторы</h2>
               <p class="mp-null">Настоящие мужские игрушки</p>
-            </div> -->
+            </div>
             <div class="second-slider">
               <h2 class="mp-null">Дрели</h2>
               <p class="mp-null">Соседям на радость!</p>
-              <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
-              <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
-              <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
             </div>
           </section>
         </div>
@@ -102,10 +127,12 @@
           <section class="elements-catalog-list element-5">
             <h2>Скидки 50%</h2>
             <a href="#">На 350 товаров</a>
+            <img class="icon-catalog-element-5 catalog-element-icons" src="img/sale.svg" alt="">
           </section>
           <section class="elements-catalog-list element-6">
             <h2>Доставка</h2>
             <a href="#">Бесплатно</a>
+            <img class="icon-catalog-element-6 catalog-element-icons" src="img/delivery.svg" alt="">
           </section>
         </div>
       </div>
@@ -150,6 +177,7 @@
             <p class="current-price">25500 Р.</p>
           </li>
           <li>
+            <span class="new-catalog-item"></span>
             <a href="#"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
             <h3>
               <a href="#">
