Выполнил домашнюю работу

--- a/catalog.html
+++ b/catalog.html
@@ -208,7 +208,13 @@
             <h2 class="visually-hidden mp-null">Каталог товаров:</h2>
             <ul class="main-catalog-list">
               <li>
-                <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
+                <a href="catalog-item.html">
+                  <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="btns-catalog-element">
+                    <button class="buy-btn" type="button" name="buy">Купить</button>
+                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  </div>
+                </a>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -219,7 +225,13 @@
                 <p class="current-price">15500 Р.</p>
               </li>
               <li>
-                <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
+                <a href="catalog-item.html">
+                  <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+                  <div class="btns-catalog-element">
+                    <button class="buy-btn" type="button" name="buy">Купить</button>
+                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  </div>
+                </a>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -231,7 +243,13 @@
               </li>
               <li>
                 <span class="new-catalog-item"></span>
-                <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
+                <a href="catalog-item.html">
+                  <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+                  <div class="btns-catalog-element">
+                    <button class="buy-btn" type="button" name="buy">Купить</button>
+                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  </div>
+                </a>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -242,7 +260,13 @@
                 <p class="current-price">12500 Р.</p>
               </li>
               <li>
-                <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
+                <a href="catalog-item.html">
+                  <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="btns-catalog-element">
+                    <button class="buy-btn" type="button" name="buy">Купить</button>
+                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  </div>
+                </a>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -254,7 +278,13 @@
               </li>
               <li>
                 <span class="new-catalog-item"></span>
-                <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
+                <a href="catalog-item.html">
+                  <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+                  <div class="btns-catalog-element">
+                    <button class="buy-btn" type="button" name="buy">Купить</button>
+                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  </div>
+                </a>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -265,7 +295,13 @@
                 <p class="current-price">25500 Р.</p>
               </li>
               <li>
-                <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
+                <a href="catalog-item.html">
+                  <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+                  <div class="btns-catalog-element">
+                    <button class="buy-btn" type="button" name="buy">Купить</button>
+                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  </div>
+                </a>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -277,7 +313,13 @@
               </li>
               <li>
                 <span class="new-catalog-item"></span>
-                <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
+                <a href="catalog-item.html">
+                  <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="btns-catalog-element">
+                    <button class="buy-btn" type="button" name="buy">Купить</button>
+                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  </div>
+                </a>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -288,7 +330,13 @@
                 <p class="current-price">15500 Р.</p>
               </li>
               <li>
-                <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
+                <a href="catalog-item.html">
+                  <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+                  <div class="btns-catalog-element">
+                    <button class="buy-btn" type="button" name="buy">Купить</button>
+                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  </div>
+                </a>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -299,7 +347,13 @@
                 <p class="current-price">25500 Р.</p>
               </li>
               <li>
-                <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
+                <a href="catalog-item.html">
+                  <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+                  <div class="btns-catalog-element">
+                    <button class="buy-btn" type="button" name="buy">Купить</button>
+                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  </div>
+                </a>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -313,10 +367,14 @@
           </section>
         </div>
           <ul class="pages mp-null">
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#" class="next-page">Следующая</a></li>
+            <input id="first-page" class="first-page visually-hidden" type="radio" name="pages" checked>
+            <input id="second-page" class="second-page visually-hidden" type="radio" name="pages">
+            <input id="third-page" class="third-page visually-hidden" type="radio" name="pages">
+            <input id="next-page" class="next-page visually-hidden" type="radio" name="pages">
+            <li><label class="first-page-label" for="first-page">1</label></li>
+            <li><label class="second-page-label" for="second-page">2</label></li>
+            <li><label class="third-page-label" for="third-page">3</label></li>
+            <li><label for="next-page" class="next-page-label">Следующая</label></li>
           </ul>
         </div>
       <div class="lightblue-background">
