Исправил разметку номеров страниц в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -367,14 +367,10 @@
           </section>
         </div>
           <ul class="pages mp-null">
-            <input id="first-page" class="first-page visually-hidden" type="radio" name="pages" checked>
-            <input id="second-page" class="second-page visually-hidden" type="radio" name="pages">
-            <input id="third-page" class="third-page visually-hidden" type="radio" name="pages">
-            <input id="next-page" class="next-page visually-hidden" type="radio" name="pages">
-            <li><label class="first-page-label" for="first-page">1</label></li>
-            <li><label class="second-page-label" for="second-page">2</label></li>
-            <li><label class="third-page-label" for="third-page">3</label></li>
-            <li><label for="next-page" class="next-page-label">Следующая</label></li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#" class="next-page">Следующая</a></li>
           </ul>
         </div>
       <div class="lightblue-background">
