Добавил pop-up write us

--- a/index.html
+++ b/index.html
@@ -337,19 +337,6 @@
           <button type="button">Закрыть</button>
         </section>
       </div>
-      <section class="visually-hidden">
-        <h2 class="visually-hidden">Форма обратной связи</h2>
-        <form class="" action="https://echo.htmlacademy.ru" method="post">
-            <label for="name">Ваше имя:</label>
-            <input id="name" type="text" name="name" value="" placeholder="Имя Фамилия">
-            <label for="email">Ваше e-mail:</label>
-            <input id="email" type="email" name="email" value="" placeholder="email@example.com">
-            <label for="letter">Текст письма:</label>
-            <textarea id="letter" name="letter" rows="8" cols="80" placeholder="В свободной форме"></textarea>
-            <button type="submit">Отправить</button>
-            <button type="button">Закрыть</button>
-        </form>
-      </section>
     </main>
     <footer class="cuprum-family">
       <div class="first-footer-background">
@@ -402,5 +389,20 @@
         </section>
       </div>
     </footer>
+    <section class="write-us">
+      <h2 class="visually-hidden">Форма обратной связи</h2>
+      <form class="" action="https://echo.htmlacademy.ru" method="post">
+          <button type="button">Закрыть</button>
+          <label for="name">Ваше имя:</label>
+          <input id="name" type="text" name="name" value="" placeholder="Имя Фамилия">
+          <label for="email">Ваше e-mail:</label>
+          <input id="email" type="email" name="email" value="" placeholder="email@example.com">
+          <label for="letter">Текст письма:</label>
+          <textarea id="letter" name="letter" rows="8" cols="80" placeholder="В свободной форме"></textarea>
+          <div class="write-us-footer">
+            <button type="submit">Отправить</button>
+          </div>
+      </form>
+    </section>
   </body>
 </html>
