Закончил разметку проекта

--- a/catalog.html
+++ b/catalog.html
@@ -92,14 +92,6 @@
     </header>
     <main class="cuprum-family">
       <div class="container">
-        <div class="visually-hidden">
-          <p>Товар добавлен в корзину!</p>
-          <a href="#">Оформить заказ</a>
-          <section>
-            <button type="button">Продолжить покупки</button>
-            <button type="button">Закрыть</button>
-          </section>
-        </div>
         <ul class="breadcrumbs mp-null">
           <li><img src="img/icon-home.svg" alt=""></li>
           <li><img src="img/icon-right-small.svg" alt=""></li>
@@ -433,5 +425,13 @@
         </section>
       </div>
     </footer>
+    <section class="added-to-cart-popup">
+      <button class="popup-close-btn" type="button"></button>
+      <h2>Товар добавлен в корзину!</h2>
+      <div class="added-to-cart-footer">
+        <a href="#">Оформить заказ</a>
+        <button type="button">Продолжить покупки</button>
+      </div>
+    </section>
   </body>
 </html>
