--- a/index.html
+++ b/index.html
@@ -331,11 +331,6 @@
             <button type="button" name="contact-us">Заблудились? Напишите нам!</button>
           </section>
         </div>
-        <section class="visually-hidden">
-          <h2 class="visually-hidden">Как до нас добраться</h2>
-          <img src="img/map-popup.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" width="940" height="446">
-          <button type="button">Закрыть</button>
-        </section>
       </div>
     </main>
     <footer class="cuprum-family">
@@ -391,18 +386,25 @@
     </footer>
     <section class="write-us">
       <h2 class="visually-hidden">Форма обратной связи</h2>
-      <form class="" action="https://echo.htmlacademy.ru" method="post">
-          <button type="button">Закрыть</button>
-          <label for="name">Ваше имя:</label>
-          <input id="name" type="text" name="name" value="" placeholder="Имя Фамилия">
-          <label for="email">Ваше e-mail:</label>
-          <input id="email" type="email" name="email" value="" placeholder="email@example.com">
-          <label for="letter">Текст письма:</label>
-          <textarea id="letter" name="letter" rows="8" cols="80" placeholder="В свободной форме"></textarea>
+      <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+          <button class="popup-close-btn" type="button"></button>
+          <div class="container-write-us">
+            <label class="write-us-name" for="name">Ваше имя:</label>
+            <label class="write-us-email" for="email">Ваше e-mail:</label>
+            <input class="write-us-name-input mp-null" id="name" type="text" name="name" placeholder="Имя Фамилия">
+            <input class="mp-null" id="email" type="email" name="email" placeholder="email@example.com">
+            <label for="letter">Текст письма:</label>
+            <textarea class="letter mp-null" id="letter" name="letter" placeholder="В свободной форме"></textarea>
+          </div>
           <div class="write-us-footer">
-            <button type="submit">Отправить</button>
+            <button class="write-us-btn" type="submit">Отправить</button>
           </div>
       </form>
+    </section>
+    <section class="map-popup">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <button class="popup-close-btn" type="button"></button>
+      <img src="img/map-popup.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" width="940" height="446">
     </section>
   </body>
 </html>
