--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами, <br>
               заехав в наш офис:</p>
-              <img src="img/map.png" width="300" height="158" alt="Карта расположения офиса компании">
+            <img src="img/map.png" width="300" height="158" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
             <button type="button" name="contact-us">Заблудились? Напишите нам!</button>
           </section>
         </div>
@@ -404,7 +404,7 @@
     <section class="map-popup">
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <button class="popup-close-btn" type="button"></button>
-      <img src="img/map-popup.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" width="940" height="446">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003404!2d30.3208587164867!3d59.93871916905368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1570129931014!5m2!1sru!2sru" width="940" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </section>
   </body>
 </html>
